--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <h1 class="message">Yay! I knew you'd say YES! ❤️</h1>
         <p style="font-size: 1.5em; color: white; margin-bottom: 2em;">You're the best thing that's ever happened to me. Let's make this Valentine's magical! 🌹 loveeeee you cutie ~jdp</p>
         <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTMwNm1vMDIzYmxrMjRjb2hqM3MwOTJ4M2ZlanltbTh1bG9idDZtYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/MDJ9IbxxvDUQM/giphy.gif" alt="gif" height="240" width="280">
-        <img src="https://i.postimg.cc/xCJcTVxV/Whats-App-Image-2026-02-05-at-14-22-39.jpg" alt="Cute couple hearts" class="cute-img">
+        <img src="YOUR IMAGE" alt="Cute couple hearts" class="cute-img">
         <div class="hearts-celebrate" id="confetti"></div>
     </div>
 
